[package]
name = "async-sqlite"
version = "0.1.0"
authors = ["roust"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = {version = "0.2", features = [ "macros", "rt-threaded" ] }
#rusqlite = { version = "0.22", features = ["bundled"] }
sqlx = { version = "0.3", default-features = false, features = [ "sqlite", "runtime-tokio", "macros" ] }